# AutoEncoderTest

./: README.md  pyproject.toml
YB_withdrawals_code/: withdrawals_mon.py  withdrawals_year.py
assesment_dataprocess/: gdp_bands_merge.py  pop_bands_merge.py  town_bands_merge_3.py  town_interpolate_year_2.py  town_tif_to_csv_1.py
dataprocess/: downloadData.py  processed_annual_water_data.csv  read_ncfile.py  water_use_plot.py  wateruse_data.py  wateruse_data_1.py  wateruse_india.py  wateruse_industry.py  wateruser_rate.py
outputs_FC/: basin_cluster_results.csv  basin_cluster_results_4.csv  combined_autoencoder.pth  encoded_output_vectors.csv  test_losses.csv  train_losses.csv
outputs_clusting/: air_cluster_results.csv  dem_cluster_results.csv  ep_cluster_results.csv  landuse_cluster_results.csv
painting/: sankey_diagram.py
tests/: basin_kmeans_clustering.py  combined_autoencoder.py  dem_basin_kmeans_clustering.py  dem_vector_reader.py  landuse_basin_kmeans_clustering.py  landuse_vector_reader.py  model copy.py  model.py  model_FC.py  model_cnn.py  model_cnn_tranformer.py  model_loss_pig.py  rof_vector_reader.py  time_serious_basin_kmeans_clustering.py
traj_project/: combine_agricultural_wateruse.py  combine_industrial_wateruse.py  wateruse_plot.py
wateruse_datasets/: 5_cons_dom_YBHM_year.dbf  5_cons_dom_YBHM_year.shp.xml  5_cons_elec_YBHM_year.dbf  5_cons_elec_YBHM_year.sbn  5_cons_elec_YBHM_year.sbx
wateruse_outputs/: cons_agricultural_total.dbf  cons_agricultural_total.shp  cons_agricultural_total.shx  cons_industrial_total.dbf
(+3 files in other folders)
